--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><a class="connect" href="https://accounts.google.com/ServiceLogin">Connexion</a></li>
+                    <li><a href="#"><svg width="24" length="24" focusable="false" viewBox="0 0 24 24"><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path></svg></a></li>
+                    <li><a href="https://www.google.com/imghp">Images</a></li>
+                    <li><a href="https://mail.google.com/mail/u/0/">Gmail</a></li>
+                </ul>
+            </nav>
+        </header>
         <div class="logo">
             <img src="logo.png" alt="Google"> 
         </div>
@@ -15,8 +25,8 @@
             </form>
         </div>
         <div class="buttons">
-            <button type="submit" form="search" value="search">Google Search</button>
-            <button type="button" value="lucky">I'm Feeling Lucky</button>
+            <button type="submit" form="search" value="search">Recherche Google</button>
+            <button type="button" value="lucky">J'ai de la chance</button>
         </div>
     </body>
 </html>
