--- a/index.html
+++ b/index.html
@@ -28,5 +28,23 @@
             <button type="submit" form="search" value="search">Recherche Google</button>
             <button type="button" value="lucky">J'ai de la chance</button>
         </div>
+        <footer>
+            <div class="country">France</div>
+            <div class="info">
+                <nav>
+                    <ul>
+                        <li><a href="https://about.google/">À propos</a></li>
+                        <li><a href="https://ads.google.com">Publicité</a></li>
+                        <li><a href="https://smallbusiness.withgoogle.com">Entreprise</a></li>
+                        <li><a href="https://www.google.com/search/howsearchworks">Comment fonctionne la recherche Google ?</a></li>
+                        <li><a class="carbon" href="https://sustainability.google/intl/fr/commitments-europes"><img src="leaf.png" width="12.25" height="14"> Neutre en carbone depuis 2007</a></li>
+                        <li><a class="right" href="https://support.google.com/websearch/answer/7585859">Info consommateurs</a></li>
+                        <li><a href="https://policies.google.com/privacy">Confidentialité</a></li>
+                        <li><a href="https://policies.google.com/terms">Conditions</a></li>
+                        <li><a href="#">Paramètres</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
     </body>
 </html>
