--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     </head>
     <body>
         <header>
-            <nav>
-                <ul>
-                    <li><a class="connect" href="https://accounts.google.com/ServiceLogin">Connexion</a></li>
-                    <li><a href="#"><svg width="24" length="24" focusable="false" viewBox="0 0 24 24"><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path></svg></a></li>
-                    <li><a href="https://www.google.com/imghp">Images</a></li>
-                    <li><a href="https://mail.google.com/mail/u/0/">Gmail</a></li>
-                </ul>
-            </nav>
+            <ul>
+                <li><a class="connect" href="https://accounts.google.com/ServiceLogin">Connexion</a></li>
+                <li><a href="#"><svg width="24" length="24" focusable="false" viewBox="0 0 24 24"><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path></svg></a></li>
+                <li><a href="https://www.google.com/imghp">Images</a></li>
+                <li><a href="https://mail.google.com/mail/u/0/">Gmail</a></li>
+            </ul>
         </header>
         <div class="logo">
             <img src="logo.png" alt="Google"> 
@@ -31,19 +29,25 @@
         <footer>
             <div class="country">France</div>
             <div class="info">
-                <nav>
+                <div class="carbon-container">
+                    <span class="carbon"><img id="leaf" src="leaf.png" width="12.25" height="14"><a id="carbon-text" href="https://sustainability.google/intl/fr/commitments-europes">Neutre en carbone depuis 2007</a></span>
+                </div>
+                <div class="left">
                     <ul>
                         <li><a href="https://about.google/">À propos</a></li>
                         <li><a href="https://ads.google.com">Publicité</a></li>
                         <li><a href="https://smallbusiness.withgoogle.com">Entreprise</a></li>
                         <li><a href="https://www.google.com/search/howsearchworks">Comment fonctionne la recherche Google ?</a></li>
-                        <li><a class="carbon" href="https://sustainability.google/intl/fr/commitments-europes"><img src="leaf.png" width="12.25" height="14"> Neutre en carbone depuis 2007</a></li>
-                        <li><a class="right" href="https://support.google.com/websearch/answer/7585859">Info consommateurs</a></li>
-                        <li><a href="https://policies.google.com/privacy">Confidentialité</a></li>
-                        <li><a href="https://policies.google.com/terms">Conditions</a></li>
+                    </ul>
+                </div>
+                <div class="right">
+                    <ul>
+                        <li><a href="https://support.google.com/websearch/answer/7585859%22%3E">Info consommateurs</a></li>
+                        <li><a href="https://policies.google.com/privacy%22%3EConfidentialité">Confidentialité</a></li>
+                        <li><a href="https://policies.google.com/terms%22%3EConditions">Conditions</a></li>
                         <li><a href="#">Paramètres</a></li>
                     </ul>
-                </nav>
+                </div>
             </div>
         </footer>
     </body>
